# claude-desktop-switcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  USER_GUIDE.md  deny.toml  release-please-config.json  rust-toolchain.toml  skills-lock.json
.agents/: AGENTS.md
.agents/skills/agentic-coding-methodology/: SKILL.md
.agents/skills/anthropic-multi-agent-orchestration/: SKILL.md
.agents/skills/core_agent_roles/: SKILL.md
.agents/skills/core_ai_workflow/: SKILL.md
.agents/skills/core_bug_fix_protocol/: SKILL.md
.agents/skills/core_ci_hang_recovery/: SKILL.md
.agents/skills/core_commit_standard/: SKILL.md
.agents/skills/core_pr_merge_checklist/: SKILL.md
.agents/skills/core_pr_review_cycle/: SKILL.md
.agents/skills/core_qa_process/: SKILL.md
.agents/skills/core_session_handoff/: SKILL.md
.agents/skills/core_spec_first_development/: SKILL.md
.agents/skills/core_worktree_for_derived_tasks/: SKILL.md
.agents/skills/csw_product_canon/: SKILL.md
.agents/skills/docs_impl_consistency_audit/: SKILL.md
.agents/skills/eu-ai-act-compliance/: SKILL.md
.agents/skills/japanese-typography-qa/: SKILL.md
.agents/skills/modern-rust-workflow/: SKILL.md
.agents/skills/official-terminology/: SKILL.md
.agents/skills/propagate-changes-to-all-surfaces/: SKILL.md
.agents/skills/repo-architecture/: SKILL.md
.agents/skills/stitch-design-taste/: SKILL.md
.agents/skills/tauri-v2-best-practices/: SKILL.md
.claude/: launch.json  settings.json
.claude/commands/: audit-consistency.md  bugfix.md  spec-first.md
.claude/hooks/: skill-first-reminder.sh
.github/: dependabot.yml  release-notes-assets.md  release-readme.md
.github/workflows/: build.yml  csw-cli.yml  deny.yml  lint.yml  pages.yml  release.yml  security.yml  test.yml  verify-release-notes.yml  verify-screenshots.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  session.rs
crates/core/src/keychain/: macos.rs  mock.rs  mod.rs
crates/core/src/platform/: macos.rs  mock.rs  mod.rs
crates/core/src/profile/: config.rs  data_map.rs  inspector.rs  linker.rs  mod.rs  state.rs  tests.rs
crates/core/src/switcher/: desktop.rs  mod.rs  shell.rs
crates/core/src/usage/: mod.rs  tests.rs
crates/core/src/watcher/: mod.rs
crates/core/tests/: integration_test.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: dmg.rs  main.rs
crates/desktop/ui/: index.html  main.js  style.css
docs/: CERTIFICATES.md  PRIVACY.md  PRIVACY_EN.md  SPECIFICATION.md  USER_GUIDE.md  USER_GUIDE_EN.md  index.html  skills-lock.json  style.css
docs/.agents/skills/agentic-coding-methodology/: SKILL.md
docs/.agents/skills/google-modern-web-guidance/: SKILL.md
docs/ja/: index.html
docs/proposals/: README.md  csw-doctor-isolation-check.md  environment-data-map.md  environment-notes-and-last-launch.md  first-launch-signpost.md  frontmost-environment-check.md  privacy-transparency-package.md  reopen-previous-set.md  trash-on-delete.md  update-takeover-notice.md  usage-bars-statusline.md  usage-display-removal.md
scripts/: sandbox-test.sh  translate_images.py
scripts/appshot/: README.md  gen-screenshots.mjs
scripts/ogshot/: README.md  gen-og.mjs
website/: index.html  script.js  style.css
website/ja/: index.html
