[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/desktop",
]

[workspace.package]
version = "0.4.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/matsumotory/claude-desktop-switcher"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
notify = "7"
colored = "3"
