[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/desktop",
]

[workspace.package]
version = "0.17.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/matsumotory/claude-desktop-switcher"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order: user settings.json files are read-modified-written by csw-core
# (usage feature); keeping key order avoids churning files the user also edits.
serde_json = { version = "1", features = ["preserve_order"] }
toml = "1.1"
anyhow = "1"
thiserror = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
notify = "8"
colored = "3"
