[package]
name = "csw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Claude Context Switcher"

[[bin]]
name = "csw"
path = "src/main.rs"

[dependencies]
csw-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
