[package]
name = "csw-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI for Claude Context Switcher"

[[bin]]
name = "csw"
path = "src/main.rs"

[dependencies]
csw-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
