[package]
name = "csw-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for Claude Context Switcher"

[features]
test-utils = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
csw-core = { path = ".", features = ["test-utils"] }
