[package]
name = "csw-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for Claude Context Switcher"

[features]
test-utils = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
humantime = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
trash = "5.2.6"
# Same version tauri already pulls in; used only to read the frontmost
# application's PID for the on-demand "which environment is this?" action.
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }

[dev-dependencies]
tempfile = "3.10"
csw-core = { path = ".", features = ["test-utils"] }
