[package]
name = "csw-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Desktop Menu Bar Application for Claude Context Switcher"

[dependencies]
csw-core = { path = "../core" }
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sys-locale = "0.3"
plist = "1"

[build-dependencies]
tauri-build = "2.0.0"
